--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
-body {
+body, html {
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-image: url("https://media3.giphy.com/media/l3V0megwbBeETMgZa/giphy.gif") */
 }
 
 code {
