--- a/src/LoadingScreen.css
+++ b/src/LoadingScreen.css
@@ -1,5 +1,5 @@
 .LoadingScreen-component {
-  background-image: url("https://media3.giphy.com/media/l3V0megwbBeETMgZa/giphy.gif");
+  background-image: url("https://media.giphy.com/media/ZW44yxLZRDdNS/giphy.gif");
   background-color: rgb(68, 30, 90);
   background-size: contain; 
   background-position: center;
