--- a/src/WordForm.css
+++ b/src/WordForm.css
@@ -25,5 +25,26 @@
   border: 1px solid ;
   user-select: none;
 
+}
+@-webkit-keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
 
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+	-webkit-animation: fadeIn .5s ease-in 1 forwards;
+  animation: fadeIn .5s ease-in 1 forwards;
+  opacity: 0;
+}
+
+.is-paused {
+	-webkit-animation-play-state: paused;
+  animation-play-state: paused;
 }
