--- a/src/WordForm.css
+++ b/src/WordForm.css
@@ -1,16 +1,23 @@
 
 .WordForm-component {
   /* background-image: url("https://media3.giphy.com/media/l3V0megwbBeETMgZa/giphy.gif"); */
-  /* background-color: rgb(68, 30, 90); */
+
+  background-image: url("https://i.pinimg.com/originals/ba/a2/84/baa284faff2374fe7e6901a2811fe121.jpg");
+  background-color: rgb(68, 30, 90);
   background-size: contain; 
   background-position: center;
-  background-repeat:no-repeat;
-
   position: absolute;
   width: 100%; 
   height: 100vh
 }
 
+.nice-text {
+  text-align: center;
+  vertical-align: middle;
+  padding: 6px 12px;
+  font-size: 2.0rem;
+  color: white;
+}
 
 .btn-success {
   display: inline-block;
@@ -21,11 +28,11 @@
   cursor: pointer;
   padding: 6px 12px;
   font-size: 1.4rem;
-  border-radius: 3px;
+  border-radius: 10px;
   border: 1px solid ;
   user-select: none;
-
 }
+
 @-webkit-keyframes fadeIn {
   to {
     opacity: 1;
