--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -6,16 +6,19 @@
   .main {
     background: linear-gradient(to right, rgb(60, 48, 63), rgb(158, 36, 177));
     width: 400px;
-    height: 400px;
+    height: 350px;
     margin: 7em auto;
+    margin-top: 12em;
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+    padding-top: 12px;
   }
 
   .btn-switch {
       cursor: pointer;
       border-radius: 5em;
-      background: linear-gradient(to right, rgb(142, 126, 144), rgb(77, 50, 82));
+      /* background: linear-gradient(to right, rgb(142, 126, 144), rgb(77, 50, 82)); */
+      background: grey;
       border: 0;
       padding-left: 40px;
       padding-right: 40px;
@@ -25,12 +28,23 @@
       font-size: 18px;
       letter-spacing: 1px;
       text-transform: uppercase;
-      color: rgb(234, 206, 245);
+      color: rgb(158, 36, 177);
+      background-color: white;
       font-family: 'Space Mono', monospace;
   }
 
+  .btn-switch:hover {
+    background: rgb(232, 104, 255);
+  }
+
+  .divider{
+    width:40px;
+    height:auto;
+    display:inline-block;
+}
+
+
   .sign {
-    padding-top: 40px;
     font-weight: bold;
     font-size: 23px;
     justify-content: center;
@@ -64,7 +78,7 @@
   }
   
   form.form1 {
-    padding-top: 40px;
+    padding-top: 5px;
   }
   
   .pass {
