--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -32,7 +32,7 @@
       letter-spacing: 1px;
       text-transform: uppercase;
       color: rgb(158, 36, 177);
-      background-color: white;
+      background-color: rgb(161, 161, 161);
       font-family: 'Space Mono', monospace;
   }
 
