--- a/src/App.css
+++ b/src/App.css
@@ -39,10 +39,54 @@
   width: 160px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
+  top: 0; 
   left: 0;
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
+}
+
+.word {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 20%; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+  margin-left: 13%;
+  color: rgb(234, 206, 245);
+}
+
+.sidenav-profile {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  height: 100%; 
+  width: 20%; 
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 0;
+  left: 1;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+}
+
+.word-profile {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 20%; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+  margin-left: 13%;
+  color: rgb(234, 206, 245);
 }
 
 /* The navigation menu links */
@@ -58,6 +102,20 @@
 .sidenav a:hover {
   color: #f1f1f1;
 }
+
+.sidenav-profile a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: rgb(234, 206, 245);
+  display: block;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav-profile a:hover {
+  color: #f1f1f1;
+}
+
 
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
