--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -1,7 +1,6 @@
   body {
     background: linear-gradient(to right, rgb(53, 47, 54), rgb(140, 35, 156));
     font-family: 'Space Mono', monospace;
-    /* text-transform: uppercase;   */
   }
 
   .main {
@@ -9,7 +8,7 @@
     width: 400px;
     height: 350px;
     margin: 7em auto;
-    margin-top: 12em;
+    margin-top: 12%;
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
     padding-top: 12px;
@@ -44,7 +43,7 @@
     width:40px;
     height:auto;
     display:inline-block;
-}
+  }
 
 
   .sign {
