--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@
 .sidenav {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   height: 100%; /* Full-height: remove this if you want "auto" height */
   width: 160px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
@@ -42,7 +43,7 @@
   top: 0; 
   left: 0;
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
+
 }
 
 .word {
@@ -63,6 +64,7 @@
 .sidenav-profile {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   position: absolute;
   height: 100%; 
   width: 20%; 
@@ -91,6 +93,14 @@
 
 /* The navigation menu links */
 .sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: rgb(234, 206, 245);
+  display: block;
+}
+
+.greeting {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 25px;
