--- a/src/WordForm.css
+++ b/src/WordForm.css
@@ -9,17 +9,6 @@
   height: 100%;
 }
 
-.input-field {
-  background: linear-gradient(to right, rgb(60, 48, 63), rgb(158, 36, 177));
-  width: 400px;
-  height: 350px;
-  margin: 7em auto;
-  margin-top: 3%;
-  border-radius: 1.5em;
-  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
-  opacity: 0.78;
-  font-family: 'Space Mono', monospace;
-}
 
 .form {
   font-weight: bold;
@@ -48,6 +37,19 @@
   /* color: rgb(234, 206, 245); */
   font-family: 'Space Mono', monospace;
 }
+.input-field {
+  background: linear-gradient(to right, rgb(60, 48, 63), rgb(158, 36, 177));
+  width: 400px;
+  height: 350px;
+  margin: 7em auto;
+  padding-top: 7px;
+  margin-top: 3%;
+  border-radius: 1.5em;
+  box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+  opacity: 0.78;
+  font-family: 'Space Mono', monospace;
+}
+
 
 /* 
 .nice-text {
