--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%; /* Full-height: remove this if you want "auto" height */
+  height: 60%; /* Full-height: remove this if you want "auto" height */
+  margin-top: 1%;
   width: 160px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
@@ -64,16 +65,15 @@
 .sidenav-profile {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  position: absolute;
-  height: 100%; 
-  width: 20%; 
+  justify-content: space-between;
+  height: 60%; /* Full-height: remove this if you want "auto" height */
+  margin-top: 1%;
+  width: 160px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
-  top: 0;
-  left: 1;
+  top: 0; 
+  left: 0;
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
 }
 
 .word-profile {
@@ -134,4 +134,21 @@
   .sidenav a {font-size: 18px;}
 }
 
-/* earlier {it}apossoun, opassom{/it}, borrowed from a Virginia Algonquian word of uncertain form, going back to Algonquian {it}*wa·p-{/it} "white" + {it}*-aʔθemw-{/it} "dog, small animal */
+.navBar {
+  cursor: pointer;
+  border-radius: 5em;
+  /* background: linear-gradient(to right, rgb(142, 126, 144), rgb(77, 50, 82)); */
+  background: grey;
+  border: 0;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  font-weight: 700;
+  font-size: 18px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: rgb(158, 36, 177);
+  background-color: rgb(161, 161, 161);
+  font-family: 'Space Mono', monospace;
+}
